# simple_calculator_v14

./: .gitignore  CMakeLists.txt  calculate.cpp  calculate.hpp  environment.cpp  environment.hpp  generic_function.hpp  generic_value.hpp  main.cpp  matrix.hpp  parser.cpp  parser.hpp  simple_calculator_v13.cpp  simple_calculator_v14.cpp  testing_generic_value.cpp  testing_mat_lib.cpp  token_stream.cpp  token_stream.hpp
